# myPad

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Package.swift  README.md  SECURITY.md
.codex/environments/: environment.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-ubuntu-tauri.yml  build.yml
Resources/: myPadIcon.icns
Sources/myPad/App/: AppDelegate.swift  MyPadApp.swift
Sources/myPad/Models/: EditorSettings.swift  Note.swift  SessionState.swift
Sources/myPad/Stores/: NoteStore.swift
Sources/myPad/Support/: MarkdownPreviewParser.swift  MarkdownTableFormatter.swift  NoteCommandTarget.swift
Sources/myPad/Views/: ContentView.swift  EditorToolbarView.swift  FindReplaceBarView.swift  MacWindowTabBarSuppressor.swift  MarkdownPreviewView.swift  NativeTabWindowConfiguration.swift  NoteWindowView.swift  PlainTextEditor.swift  StatusBarView.swift  SyncedScrollView.swift  TabBarView.swift
Tests/NoteStoreSelfTests/: main.swift
docs/: INSTALL_UBUNTU_TH.md  PUBLISHING_TO_GITHUB_TH.md  UBUNTU_TAURI_PROTOTYPE_TH.md
script/: build_and_run.sh  install_app.sh  package_release.sh  test_note_store.sh
ubuntu/: index.html  package-lock.json  package.json
ubuntu/src/: App.tsx  styles.css
ubuntu/src-tauri/: Cargo.toml  tauri.conf.json
ubuntu/src-tauri/capabilities/: default.json
ubuntu/src-tauri/icons/: icon.icns
ubuntu/src-tauri/src/: lib.rs  main.rs
ubuntu/src/components/: Editor.tsx
ubuntu/src/lib/: listTransforms.test.ts  listTransforms.ts  session.test.ts  session.ts  (+2 more)
