[package]
name = "mypad-ubuntu"
version = "0.1.0"
description = "Ubuntu prototype for myPad"
authors = ["myPad contributors"]
edition = "2021"

[lib]
name = "mypad_ubuntu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
